<resources>
    <string name="app_name">Book Buy</string>
    <string name="action_settings">Sobre</string>
    <string name="title_activity_cadastrar">Cadastre-se</string>
    <string name="title_activity_redefinir_senha">Redefinir Senha</string>
    <string name="mensagem">   Digite seu email e nós lhe enviamos instruções para definir uma nova senha.</string>
    <string name="title_activity_mapa">Map</string>
    <string name="title_activity_minha_conta">Meu Perfil</string>
    <string name="title_activity_minhas_compras">Minhas Compras</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="email">Email</string>
    <string name="contato_cadastrado">Contato cadastrado</string>
    <string name="forma_pagamento">Forma de Pagamento</string>
    <string name="conta_paypal">Conta Paypal</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="facebook_key">738499262944915</string>
    <string name="title_activity_editar_cadastro">Editar Cadastro</string>
    <string name="title_activity_menu_restaurante">Menu Restaurante</string>
    <string name="title_activity_pedido">Pedido</string>
    <string name="title_activity_reserva">ReservaActivity</string>
    <string name="title_produto">Cardápio</string>
    <string name="title_reserva">Reserva</string>
    <string name="title_informacoes">Descrição</string>
    <string name="title_activity_splash">Book Buy</string>
    <string name="dialog_tipo">Escolha um Tipo:</string>
    <string name="txtNomeRestaurante">Restaurante:</string>
    <string name="txtNomeCliente">Cliente:</string>
    <string name="txtHorario">Datas Disp.:</string>
    <string name="txtQtdPessoas">Quantidade de pessoas:</string>
    <string name="bttReservar">Efetuar Reserva!!!</string>
    <string name="subtitle_splash">Reserve &amp; Compre</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iconeRota">Traçar Rota</string>
    <string name="iconeMapa">Traçar Rota</string>
    <string name="iconeFiltro">Filtrar</string>
    <string name="title_minhas_reservas">Reservas</string>
    <string name="title_meus_pedidos">Pedidos</string>
    <string name="opcao">Escolha uma opção:</string>
    <string name="atualizar_reserva">Atualizar</string>
    <string name="title_activity_editar_reserva">Atualizar Reserva</string>
    <string name="quantidade">Quantidade:</string>
    <string name="title_activity_pagamento">Efetuar Pagamento</string>
    <string name="total">Total:</string>
    <string name="txtDataHora">Data/Hora:</string>
    <string name="adicionar">Adicionar</string>
    <string name="icFinalizarPedido">Finalizar</string>
    <string name="dialog_meu_pedido">Resumo do Pedido</string>
    <string name="dialog_adicionar_item">Resumo</string>
    <string name="bttConcluir">Concluir</string>
    <string name="bttCancelar">Cancelar</string>
    <string name="bttSalvar">Salvar</string>
    <string name="avaliacao">Avalie nosso Restaurante:</string>
    <string name="obrigado">Obrigado pela sua avaliação!!!</string>
    <string name="waiting_for_answer">Aguardando resposta...</string>
    <string name="transaction_cancelled">A transação foi cancelada com sucesso!</string>
    <string name="transaction_succeded">A transação foi efetuada sucesso!</string>
    <string name="transaction_error">A tentativa de compra falhou! Tente novamente!</string>
    <string name="cancel_pagseguro">Deseja realmente cancelar?</string>
    <string name="loading_1">Carregando.</string>
    <string name="loading_2">Carregando..</string>
    <string name="loading_3">Carregando...</string>
    <string name="pagseguro">PagSeguro</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="excluir">Excluir</string>
    <string name="pergunta">Deseja excluir esse produto?</string>
    <string name="title_activity_pag_seguro">Pag Seguro</string>
    <string name="facebook_app_id">1517568258565776</string>
    <string name="bttAdicionarItem">Adicionar Produto</string>
    <string name="title_adicionar_produto">Cardápio</string>
</resources>
