<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.asilva.bookbuy.fragments.ReservaFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtNomeRestaurante"
        android:id="@+id/txtNomeProduto"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edtNomeRestaurante"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/txtNomeProduto"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="7dp"
        android:editable="false"
        android:enabled="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtNomeCliente"
        android:id="@+id/txtNomeCliente"
        android:layout_below="@+id/edtNomeRestaurante"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:enabled="true"
        android:layout_marginTop="18dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edtNomeCliente"
        android:layout_below="@+id/edtNomeRestaurante"
        android:layout_toRightOf="@+id/txtNomeCliente"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:enabled="true"
        android:editable="false"
        android:layout_marginTop="5dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txtHorario"
            android:id="@+id/txtDataHora"
            android:layout_below="@+id/edtNomeCliente"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="18dp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spnReservas"
            android:layout_alignBottom="@+id/txtDataHora"
            android:layout_toRightOf="@+id/txtDataHora"
            android:layout_toEndOf="@+id/txtDataHora" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txtQtdPessoas"
            android:id="@+id/textView6"
            android:layout_below="@+id/edtNomeCliente"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="18dp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spnQtdPessoas"
            android:layout_alignBottom="@+id/txtDataHora"
            android:layout_toRightOf="@+id/txtDataHora"
            android:layout_toEndOf="@+id/txtDataHora"
            android:layout_marginTop="18dp" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bttReservar"
        android:id="@+id/bttReservar"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:background="#2b1d0c"
        android:textColor="#ffffff"
        android:layout_alignParentStart="true" />

</RelativeLayout>
